<resources>
    <string name="app_name">Tanam Pintar</string>
    <string name="image">Gambar</string>

    <!--    Splash Screen-->
    <string name="splash_screen">Created by C241-PS481 with ❤️‍</string>

    <!--    Home-->
    <string name="home">Home</string>
    <string name="greeting">Halo,</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="profile">Profil</string>
    <string name="scan">Scan</string>
    <string name="history">Riwayat</string>
    <string name="reminder">Pengingat</string>
    <string name="setting">Pengaturan</string>
    <string name="desc">Membantu menganalisa tanah disekitarmu dengan sangat mudah</string>
    <string name="soil_type_title">Jenis Tanah</string>
    <string name="soil_type">Jenis Tanah</string>
    <string name="history_card_title">Riwayat Analisa</string>
    <string name="reminder_card_title">Jadwal Menyiram</string>
    <string name="desc_card">Sentuh disini</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Component Edit Text-->
    <string name="password_require">Minimal 8 Karakter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_error_message">Masukkan email dengan benar</string>

    <!--    Login-->
    <string name="login">Login</string>
    <string name="desc_login">Masukan email dan password untuk masuk</string>
    <string name="desc_login2">Belum punya akun?</string>
    <string name="button_login">Masuk</string>
    <string name="button_register">Daftar</string>

    <!--    Register-->
    <string name="register">Register</string>
    <string name="desc_register">Daftarkan akunmu untuk masuk</string>
    <string name="desc_register2">Sudah punya akun?</string>
    <string name="email_created">Akun berhasil dibuat</string>

    <!--    Detail-->
    <string name="imagedetail">imageDetail</string>
    <string name="buttonback">buttonBack</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="plant_name">Nama Tanaman</string>
    <string name="imageplant">imagePlant</string>
    <string name="recommendation">Rekomendasi Tanaman</string>

    <!--    Profile-->
    <string name="imageprofile">imagePerson</string>
    <string name="nameProfile">Your Name</string>
    <string name="emailProfile">youremail@email.com</string>
    <string name="dark_mode">Mode Malam</string>
    <string name="about_us">Tentang Kami</string>
    <string name="profile_detail">Ubah Profil</string>
    <string name="logout">Keluar</string>
    <string name="message_dialog">Apakah anda yakin ingin keluar?</string>
    <string name="no">Tidak</string>
    <string name="yes">Iya</string>

    <!--    History-->
    <string name="title_history">Riwayat Analisa</string>
    <string name="time_history">DD:MM:YYYY</string>
    <string name="delete">Hapus</string>
    <string name="delete_message">Apakah yakin menghapus riwayat?</string>

    <!--    Analyze-->
    <string name="title_analyze">Deteksi Tanah</string>
    <string name="save_history">Simpan Riwayat?</string>
    <string name="detail_soil">Detail Tanah</string>
    <string name="camera">Ini Kamera</string>
    <string name="gallery">Ini Galeri</string>
    <string name="reset">Reset Gambar</string>
    <string name="analyze">Analisa Gambar</string>
    <string name="save_button">Simpan</string>
    <string name="detail_button">Detail</string>
    <string name="title_warning">Silahkan Masukan Gambar</string>
    <string name="desc_warning">Pastikan gambar identik dengan tanah dan terlihat jelas</string>
    <string name="result_analyze">Hasil Analisa : %s</string>
    <string name="empty_image_warning">Pilih gambar terlebih dahulu</string>

</resources>