<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:id="@+id/logoApp"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_full"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="23sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="@id/logoApp"
            app:layout_constraintStart_toStartOf="@id/logoApp"
            app:layout_constraintTop_toBottomOf="@id/logoApp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_register_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/desc_register"
            app:layout_constraintEnd_toEndOf="@id/tv_register"
            app:layout_constraintStart_toStartOf="@id/tv_register"
            app:layout_constraintTop_toBottomOf="@id/tv_register"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/desc"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customEditText"
            app:layout_constraintTop_toBottomOf="@id/tv_register_desc"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/fullname"
                android:minHeight="50dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="0dp"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditText"
            app:layout_constraintTop_toBottomOf="@id/fullnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customEditText"
            android:layout_marginTop="12dp">

            <com.capstone.tanampintar.component.EditTextEmail
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:minHeight="50dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="0dp"
                android:inputType="textEmailAddress"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            style="@style/customEditText"
            android:layout_marginTop="12dp">

            <com.capstone.tanampintar.component.EditTextPassword
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:fontFamily="@font/poppins_regular"
                android:minHeight="50dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="0dp"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_style_1"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            android:text="@string/button_register"
            android:textAllCaps="false" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/register"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/register_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/desc_register2"
            android:textColor="@color/desc"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <Button
            android:id="@+id/login"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAllCaps="false"
            android:textColor="@color/main_color"
            android:background="@drawable/button_style_2"
            app:layout_constraintTop_toBottomOf="@+id/register_desc"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/button_login"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="@id/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminateTint="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>